[Fix #358] nav라우터 추가, 마피아 게임페이지 css z-index 수정

--- a/style/livekit/livekit.module.css
+++ b/style/livekit/livekit.module.css
@@ -185,7 +185,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 1;
 }
 
 .timer {
@@ -223,7 +223,7 @@
   left: 30px;
   top: 15px;
   font-weight: var(--font-bold);
-  z-index: 1;
+  z-index: 2;
 }
 
 .goToMainPage > button {
